--- a/style.css
+++ b/style.css
@@ -3,10 +3,31 @@
    alexandrybrito@gmail.com 
 */
 
+/* mportação (Google-fonts)*/
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+
+/* CSS Reset*/
+*{
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+body {
+    font-family: 'Open sans', sans-serif;
+    font-size: 1em;
+}
+
+/* Layout */
+.container {
+    margin: 0 auto;
+    background-color: #7f0;
+}
 
 /* Smartphone Portrait >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 /* Layout */
-/* Cabeçalho */
+/* Cabeçalho
 header {
     height: 60px;
 }
@@ -15,7 +36,7 @@ header {
     width: 170px;
     height: 130px;
 }
-
+*/
 /* Smartphone Landscape >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 @media (min-width: 576px) {
     body {
