--- a/style.css
+++ b/style.css
@@ -22,27 +22,68 @@ body {
 /* Layout */
 .container {
     margin: 0 auto;
-    background-color: #7f0;
+}
+
+.Flex {
+    display: flex;
+    justify-content: space-between;
+}
+
+/* topo do site */
+#topo {
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
 }
 
 /* Smartphone Portrait >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
-/* Layout */
-/* Cabeçalho
+/* Cabeçalho */
 header {
     height: 60px;
 }
 
 #logo img {
-    width: 170px;
-    height: 130px;
+    width: 130px;
+    height:98px;
+    margin-top: 10px;
 }
-*/
+
+#check {
+    display: none;
+}
+
+label {
+    font-size: 3em;
+    padding-right: 15px;
+}
+
+nav ul {
+    list-style: none;
+    background-color: #343538;
+    height: 100vh;
+    position: fixed;
+    top: 60px;
+    right: -100%;
+    width: 70%;
+    transition: all 0.5s;
+}
+
+#check:checked ~ ul {
+    right: 0;
+}
+
+nav ul li {
+    padding: 20px;
+    border-bottom: 1px solid #a9a9a9;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #fff;
+}
+
 /* Smartphone Landscape >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 @media (min-width: 576px) {
-    body {
-        background-color: #0ff;
-    }
-
     /* Layout */
     .container {
         max-width: 540px;
@@ -52,10 +93,6 @@ header {
 
 /* Tablet portrait >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 @media (min-width: 768px) {
-    body {
-        background-color: #ff0;
-    }
-
     /* Layout */
     .container {
         max-width: 720px;
@@ -65,10 +102,6 @@ header {
 
 /* Tablet Landscape >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 @media (min-width: 992px) {
-    body {
-        background-color: #ff6600;
-    }
-
     /* Layout */
     .container {
         max-width: 960px;
@@ -78,12 +111,46 @@ header {
 
 /* PC e Notebook >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 @media (min-width: 1200px) {
-    body {
-        background-color: #f0f;
-    }
-
     /* Layout */
     .container {
         max-width: 1140px;
     }
+
+    /* Cabeçalho */
+    header {
+        height: 95px;
+    }
+
+    #logo img {
+        width: 170px;
+        height: 130px;
+        margin-top: 30px;
+    }
+
+    label {
+        display: none;
+    }
+
+    nav ul {
+        position: static;
+        height: auto;
+        background-color: transparent;
+        margin-top: 50px;
+        display: flex;
+    }
+
+    nav ul li {
+        float: left;
+        border: 0;
+    }
+
+    nav ul li a {
+        color: #343538;
+    }
+
+    nav ul li a:hover {
+        color: #c00;
+    }
+
 }
+    
