--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ body {
     flex-direction: row;
 }
 
+.Flex3 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
 .Botao {
     text-decoration: none;
     color: #fff;
@@ -51,6 +57,38 @@ body {
     right: 10px;
     bottom: 10px;
 }
+
+/* Cartões */
+.card {
+    margin-top: 25px;
+    width: 338px;
+    height: 650px;
+    background-color: #e8e8e8;
+    border: 1px solid #a1a1a1;
+    border-radius: 25px;
+    text-align: center;
+}
+
+.card img {
+    border-radius: 25px 25px 0px 0px;
+}
+
+.card h3 {
+    margin-top: 15px;
+}
+
+.card p {
+    text-align: left;
+    color: #434343;
+    padding: 10px 30px 60px 20px;
+}
+
+.card a {
+    padding: 10px 100px;
+    border: 0;
+}
+
+
 
 /* Smartphone Portrait >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 /* Cabeçalho */
@@ -160,6 +198,16 @@ aside ul {
 
 aside ul li a {
     color: #fff;
+}
+
+/* Conteudo */
+#conteudo {
+    padding: 50px 0px;
+}
+
+#conteudo h2 {
+    margin-bottom: 25px;
+    text-align: center;
 }
 
 
