--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
     border: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Open sans', sans-serif;
     font-size: 1em;
@@ -128,7 +132,7 @@ label {
 
 nav ul {
     list-style: none;
-    background-color: #343538;
+    background-color: rgba(52,53,56,0.9);
     height: 100vh;
     position: fixed;
     top: 60px;
